--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -16,13 +16,13 @@
   --color-white: #F1F1F1;
   --color-gray: #6E6E73;
 
-  --spacing-xxsmall: 0.75rem; /*10px*/
+  --spacing-xxsmall: 0.625rem; /*10px*/
   --spacing-xsmall: 0.938rem; /*15px*/
   --spacing-small: 1.25rem;   /*20px*/
   --spacing-medium: 2.5rem;   /*40px*/
   --spacing-large: 3.125rem;
   --spacing-xlarge: 4.8rem;
-  --spacing-xxlarge: 5.6rem;
+  --spacing-xxlarge: 10rem;
 
   --layer-base: 10;
   --layer-menu: 20;
@@ -82,6 +82,7 @@
  textarea,
  input,
  select,
+ svg,
  a{
    color: inherit;
    text-decoration: none;
@@ -140,16 +141,6 @@
   margin: var(--spacing-medium) 0;
 }
 
-
-.mt-10{
-  margin-top: var(--spacing-xxsmall);
-}
-.mt-20{
-  margin-top: var(--spacing-small);
-}
-.mt-40{
-  margin-top: var(--spacing-medium);
-}
 .mt-50{
   margin-top: var(--spacing-large);
 }
