--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -14,7 +14,7 @@
   --color-primary-dark: #000000;
   --color-secondary-dark: #151516;
   --color-white: #F1F1F1;
-  --color-gray: #6E6E73;
+  --color-gray: #7a7a7a;
 
   --spacing-xxsmall: 0.625rem; /*10px*/
   --spacing-xsmall: 0.938rem; /*15px*/
@@ -65,6 +65,8 @@
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
+   padding-inline-start: 0;
+   list-style: none;
  }
  
  h1 {
@@ -100,12 +102,11 @@
 .color-gray{
   color: var(--color-gray);
 }
-
 /* 
  * Font size
  *--------------------------------------------------------------*/
 
- .font-size-zero{
+ .font-zero{
    font-size: var(--font-size-zero);
  }
  .font-size-small{
