--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -56,6 +56,7 @@
  body {
    padding: 0;
    margin: 0;
+   min-width: 320px;
    font-family: var(--font-family);
    background-color: var(--color-primary-dark);
    color: var(--color-primary);
