--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -49,6 +49,7 @@
   height: 20.75rem;
   background-color: #111;
   border-radius: 0.25rem;
+  cursor: pointer;
 }
 .nice-to--text{
   position: absolute;
@@ -58,7 +59,6 @@
   position: absolute;
   color: var(--color-gray);
   bottom: var(--spacing-xsmall);
-  cursor: pointer;
 }
 .about-me--text svg{
   transition: all 0.2s linear;
@@ -82,10 +82,10 @@
 */
 .works{
   display: flex;
-  height: 60rem;
   flex-direction: column;
   background-color: var(--color-secondary-dark);
   margin-top: 60px;
+  padding-bottom: 60px;
 }
 .my-works--text{
   text-align: center;
@@ -96,10 +96,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
   width: 83.7%;
   height: 460px;
   background-color: var(--color-primary-dark);
   border-radius: 1rem;
+  margin-bottom: 30px;
 }
 .card-work h1{
   margin-top: var(--spacing-xlarge);
