--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -63,11 +63,12 @@
  }
  
  * {
-   box-sizing: border-box;
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
-   padding-inline-start: 0;
-   list-style: none;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+  padding-inline-start: 0;
+  list-style: none;
  }
  
  h1 {
@@ -96,6 +97,11 @@
    -ms-user-select: none;
    user-select: none;
  }
+ hr{
+   background-color: #333;
+   border-width:0;
+   height:1px;
+ }
 
 /* 
  * Colors
@@ -109,6 +115,9 @@
 
  .font-zero{
    font-size: var(--font-size-zero);
+ }
+ .font-size-medium{
+   font-size: var(--font-size-medium);
  }
  .font-size-small{
    font-size: var(--font-size-small);
@@ -131,6 +140,9 @@
 .mx-20{
   margin: 0 var(--spacing-small);
 }
+.mx-40{
+  margin: 0 var(--spacing-medium);
+}
 
 
 .my-10{
@@ -141,10 +153,6 @@
 }
 .my-40{
   margin: var(--spacing-medium) 0;
-}
-
-.mt-50{
-  margin-top: var(--spacing-large);
 }
 
 .mb-20{
