--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -49,7 +49,6 @@
   height: 20.75rem;
   background-color: #111;
   border-radius: 0.25rem;
-  cursor: pointer;
 }
 .nice-to--text{
   position: absolute;
@@ -59,6 +58,7 @@
   position: absolute;
   color: var(--color-gray);
   bottom: var(--spacing-xsmall);
+  cursor: pointer;
 }
 .about-me--text svg{
   transition: all 0.2s linear;
@@ -115,3 +115,14 @@
 /* 
     contacts
 */
+.contacts{
+  margin-top: var(--spacing-xxlarge);
+}
+.contacts li{
+  margin: var(--spacing-small) 0;
+}
+.copy{
+  margin-top: var(--spacing-large);
+  margin-bottom: 30px;
+  font-size: 1rem;
+}
