--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -102,6 +102,34 @@
    border-width:0;
    height:1px;
  }
+ input[type="radio"] {
+  background-color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  display: inline-block;
+  height: 15px;
+  margin-right: 15px;
+  position: relative;
+  width: 15px;
+  -webkit-appearance: none;
+}
+input[type="radio"]:after {
+  background-color: #fff;
+  border-radius: 25px;
+  content: '';
+  display: block;
+  height: 7px;
+  left: 4px;
+  position: relative;
+  top: 4px;
+  width: 7px;
+}
+input[type="radio"]:checked:after {
+  background-color: #000;
+}
+label{
+  cursor: pointer;
+}
 
 /* 
  * Colors
@@ -161,7 +189,16 @@
 .mb-40{
   margin-bottom: var(--spacing-medium);
 }
+.mb-80{
+  margin-bottom: var(--spacing-xxlarge);
+}
 
+.mt-20{
+  margin-top: var(--spacing-small);
+}
+.mt-40{
+  margin-top: var(--spacing-medium);
+}
 
 .ml-10{
   margin-left: var(--spacing-xxsmall);
