--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -47,7 +47,7 @@
   position: relative;
   width: 100%;
   height: 20.75rem;
-  background-color: #111;
+  background-color: var(--color-secondary-dark);
   border-radius: 0.25rem;
 }
 .nice-to--text{
@@ -125,4 +125,23 @@
   margin-top: var(--spacing-large);
   margin-bottom: 30px;
   font-size: 1rem;
+}
+
+@media only screen and (min-width: 600px) {
+  :root{
+    --font-size-small: calc(1.25rem + 50%);
+  }
+  h1 {
+    font-size: calc(var(--font-size-large) + 100%);
+  }
+  h2{
+    font-size: calc(var(--font-size-medium) + 100%);
+  }
+  .presentation{
+    height: 45rem;
+    width: calc(16rem + 10%);
+  }
+  .card-about{
+    height: calc(20.75rem + 10rem);
+  }
 }
