--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,8 +1,7 @@
 .container{
   max-width: 980px;
   width: 90.34%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 /* 
@@ -25,8 +24,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 32rem;
-  width: 16rem;
+  height: 70vh;
+  width: 20rem;
+  padding: 0 22px;
 }
 .my-social ul{
   display: flex;
@@ -42,23 +42,23 @@
 /* 
     card about
 */
-
 .card-about{
-  position: relative;
-  width: 100%;
-  height: 20.75rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 22px;
   background-color: var(--color-secondary-dark);
   border-radius: 0.25rem;
-}
-.nice-to--text{
-  position: absolute;
-  top: var(--spacing-xsmall);
+  height: 20rem;
 }
 .about-me--text{
-  position: absolute;
+  display: flex;
+  align-items: center;
   color: var(--color-gray);
-  bottom: var(--spacing-xsmall);
   cursor: pointer;
+}
+.icon-arrow{
+  margin: 0.35rem 0 0 0.525rem;
 }
 .about-me--text svg{
   transition: all 0.2s linear;
@@ -72,9 +72,6 @@
 }
 .about-me--text:hover .icon-arrow{
   margin-left: 0.825rem;
-}
-.icon-arrow{
-  margin-left: 0.525rem;
 }
 
 /* 
@@ -129,17 +126,16 @@
 
 @media only screen and (min-width: 600px) {
   :root{
-    --font-size-small: calc(1.25rem + 50%);
+    --font-size-small: calc(1.25rem + 30%);
   }
   h1 {
-    font-size: calc(var(--font-size-large) + 100%);
+    font-size: calc(var(--font-size-large) + 50%);
   }
   h2{
-    font-size: calc(var(--font-size-medium) + 100%);
+    font-size: calc(var(--font-size-medium) + 50%);
   }
   .presentation{
-    height: 45rem;
-    width: calc(16rem + 10%);
+    width: calc(23rem);
   }
   .card-about{
     height: calc(20.75rem + 10rem);
