--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,143 +1,149 @@
-.container{
-  max-width: 980px;
-  width: 90.34%;
-  margin: 0 auto;
+.container {
+    max-width: 980px;
+    width: 90.34%;
+    margin: 0 auto;
 }
 
 /* 
     menu
 */
-.menu{
-  height: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+.menu {
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
-.icon-menu{
-  cursor: pointer;
+.icon-menu {
+    cursor: pointer;
 }
 
 /* 
     hello
 */
-.presentation{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 70vh;
-  width: 20rem;
-  padding: 0 22px;
+.presentation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 70vh;
+    width: 20rem;
+    padding: 0 22px;
 }
-.my-social ul{
-  display: flex;
+.my-social ul {
+    display: flex;
 }
-.social{
-  transition: fill 0.3s ease;
-
+.social {
+    transition: fill 0.3s ease;
 }
-.social:hover{
-  fill: var(--color-primary);
+.social:hover {
+    fill: var(--color-primary);
 }
 
 /* 
     card about
 */
-.card-about{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 0 22px;
-  background-color: var(--color-secondary-dark);
-  border-radius: 0.25rem;
-  height: 20rem;
+.card-about {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 22px;
+    background-color: var(--color-secondary-dark);
+    border-radius: 0.25rem;
+    height: 20rem;
 }
-.about-me--text{
-  display: flex;
-  align-items: center;
-  color: var(--color-gray);
-  cursor: pointer;
+.card-about header {
+    width: 10rem;
 }
-.icon-arrow{
-  margin: 0.35rem 0 0 0.525rem;
+.about-me--text {
+    display: flex;
+    align-items: center;
+    color: var(--color-gray);
+    cursor: pointer;
 }
-.about-me--text svg{
-  transition: all 0.2s linear;
+.icon-arrow {
+    margin: 0.35rem 0 0 0.525rem;
 }
-.about-me--text h2{
-  transition: color 0.2s linear;
+.about-me--text svg {
+    transition: all 0.2s linear;
 }
-.about-me--text:hover, .about-me--text:hover .icon-arrow{
-  fill: #a7a7a7;
-  color: #a7a7a7;
+.about-me--text h2 {
+    transition: color 0.2s linear;
 }
-.about-me--text:hover .icon-arrow{
-  margin-left: 0.825rem;
+.about-me--text:hover,
+.about-me--text:hover .icon-arrow {
+    fill: #a7a7a7;
+    color: #a7a7a7;
+}
+.about-me--text:hover .icon-arrow {
+    margin-left: 0.825rem;
 }
 
 /* 
     works
 */
-.works{
-  display: flex;
-  flex-direction: column;
-  background-color: var(--color-secondary-dark);
-  margin-top: 60px;
-  padding-bottom: 60px;
+.works {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-secondary-dark);
+    margin-top: 60px;
+    padding-bottom: 60px;
 }
-.my-works--text{
-  text-align: center;
-  color: var(--color-white);
-  margin-top: var(--spacing-xxlarge);
+.my-works--text {
+    text-align: center;
+    color: var(--color-white);
+    margin-top: var(--spacing-xxlarge);
 }
-.card-work{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  width: 83.7%;
-  height: 460px;
-  background-color: var(--color-primary-dark);
-  border-radius: 1rem;
-  margin-bottom: 30px;
+.card-work {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    width: 83.7%;
+    height: 460px;
+    background-color: var(--color-primary-dark);
+    border-radius: 1rem;
+    margin-bottom: 30px;
 }
-.card-work h1{
-  margin-top: var(--spacing-xlarge);
-  font-size: var(--font-size-medium);
+.card-work h1 {
+    margin-top: var(--spacing-xlarge);
+    font-size: var(--font-size-medium);
 }
 .card-work ul {
-  display: flex;
-  color: #09D9FE;
+    display: flex;
+    color: #09d9fe;
 }
 
 /* 
     contacts
 */
-.contacts{
-  margin-top: var(--spacing-xxlarge);
+.contacts {
+    margin-top: var(--spacing-xxlarge);
 }
-.contacts li{
-  margin: var(--spacing-small) 0;
+.contacts li {
+    margin: var(--spacing-small) 0;
 }
-.copy{
-  margin-top: var(--spacing-large);
-  margin-bottom: 30px;
-  font-size: 1rem;
+.copy {
+    margin-top: var(--spacing-large);
+    margin-bottom: 30px;
+    font-size: 1rem;
 }
 
 @media only screen and (min-width: 600px) {
-  :root{
-    --font-size-small: calc(1.25rem + 30%);
-  }
-  h1 {
-    font-size: calc(var(--font-size-large) + 50%);
-  }
-  h2{
-    font-size: calc(var(--font-size-medium) + 50%);
-  }
-  .presentation{
-    width: calc(23rem);
-  }
-  .card-about{
-    height: calc(20.75rem + 10rem);
-  }
+    :root {
+        --font-size-small: calc(1.25rem + 30%);
+    }
+    h1 {
+        font-size: calc(var(--font-size-large) + 50%);
+    }
+    h2 {
+        font-size: calc(var(--font-size-medium) + 50%);
+    }
+    .presentation {
+        width: calc(23rem);
+    }
+    .card-about {
+        height: calc(20.75rem + 10rem);
+    }
+    .card-about header {
+        width: 13rem;
+    }
 }
