--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -1,4 +1,4 @@
-/* 
+/*
  * Váriaveis
  *--------------------------------------------------------------*/
 
@@ -47,7 +47,7 @@
     src: local(''), url('/fonts/open-sans-700.woff2') format('woff2');
 }
 
-/* 
+/*
  * Reset
  *--------------------------------------------------------------*/
 
@@ -130,13 +130,13 @@ label {
     cursor: pointer;
 }
 
-/* 
+/*
  * Colors
  *--------------------------------------------------------------*/
 .color-gray {
     color: var(--color-gray);
 }
-/* 
+/*
  * Font size
  *--------------------------------------------------------------*/
 
@@ -151,7 +151,7 @@ label {
     font-weight: 600;
 }
 
-/* 
+/*
  * Spacing margin
  *--------------------------------------------------------------*/
 
@@ -196,6 +196,9 @@ label {
 }
 .mt-40 {
     margin-top: var(--spacing-medium);
+}
+.mt-80 {
+    margin-top: var(--spacing-xxlarge);
 }
 
 .ml-10 {
