--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
 }
 
-/* 
+/*
     menu
 */
 .menu {
@@ -17,7 +17,7 @@
     cursor: pointer;
 }
 
-/* 
+/*
     hello
 */
 .presentation {
@@ -38,7 +38,7 @@
     fill: var(--color-primary);
 }
 
-/* 
+/*
     card about
 */
 .card-about {
@@ -57,6 +57,8 @@
     display: flex;
     align-items: center;
     color: var(--color-gray);
+    background-color: transparent;
+    border: none;
     cursor: pointer;
 }
 .icon-arrow {
@@ -77,7 +79,7 @@
     margin-left: 0.825rem;
 }
 
-/* 
+/*
     works
 */
 .works {
@@ -112,13 +114,13 @@
     color: #09d9fe;
 }
 
-/* 
-    contacts
+/*
+    touch
 */
-.contacts {
+.footer {
     margin-top: var(--spacing-xxlarge);
 }
-.contacts li {
+.touch li {
     margin: var(--spacing-small) 0;
 }
 .copy {
