--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -62,7 +62,7 @@
     cursor: pointer;
 }
 .icon-arrow {
-    margin: 0.35rem 0 0 0.525rem;
+    margin: 0.15rem 0 0 0.55rem;
 }
 .about-me--text svg {
     transition: all 0.2s linear;
@@ -123,6 +123,14 @@
 .touch li {
     margin: var(--spacing-small) 0;
 }
+.touch a {
+  transition: 0.3s ease;
+}
+
+.touch a:hover{
+  color: var(--color-gray);
+}
+
 .copy {
     margin-top: var(--spacing-large);
     margin-bottom: 30px;
@@ -130,6 +138,29 @@
 }
 .lang {
     border-top: 1px solid #333;
+}
+.lang label{
+  cursor: pointer;
+  margin-right: 15px;
+}
+.lang input{
+  background: none;
+  appearance: none;
+  margin: 0;
+  vertical-align: middle;
+  width: 17px;
+  height: 17px;
+  border-radius: 10px;
+  box-shadow: inset 0 0 0 1.5px #fff;
+  transition: box-shadow 150ms cubic-bezier(.95,.15,.5,1.25);
+  pointer-events: none;
+}
+.lang span {
+  vertical-align: middle;
+  padding: 0 10px;
+}
+.lang input:checked{
+  box-shadow: inset 0 0 0 5px #fff;
 }
 
 @media only screen and (min-width: 600px) {
