--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -36,14 +36,14 @@
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 600;
-    font-display: swap;
+    font-display: optional;
     src: local(''), url('/fonts/open-sans-600.woff2') format('woff2');
 }
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 700;
-    font-display: swap;
+    font-display: optional;
     src: local(''), url('/fonts/open-sans-700.woff2') format('woff2');
 }
 
