--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -96,7 +96,21 @@ a {
 	-ms-user-select: none;
 	user-select: none;
 }
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #555555;
+    border-radius: 10px;
+}
 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #878787;
+}
 /*
  * Colors
  *--------------------------------------------------------------*/
