--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -97,12 +97,18 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	position: relative;
 	width: 83.7%;
 	height: 460px;
 	background-color: var(--color-primary-dark);
 	border-radius: 1rem;
 	margin-bottom: 30px;
 	cursor: pointer;
+	opacity: 0.5;
+	transition: 0.3s ease;
+}
+.card-work:hover{
+	opacity: 1;
 }
 .card-work h1 {
 	margin-top: var(--spacing-xlarge);
