--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -35,16 +35,18 @@
 @font-face {
 	font-family: 'Open Sans';
 	font-style: normal;
-	font-weight: 600;
+	font-weight: 700;
 	font-display: swap;
-	src: local(''), url('/fonts/open-sans-600.woff2') format('woff2');
+	src: local(''), url('/fonts/open-sans-700.woff2') format('woff2');
+	unicode-range: U+0020-007E;
 }
 @font-face {
 	font-family: 'Open Sans';
 	font-style: normal;
-	font-weight: 700;
-	font-display: swap;
-	src: local(''), url('/fonts/open-sans-700.woff2') format('woff2');
+	font-weight: 600;
+	font-display: optional;
+	src: local(''), url('/fonts/open-sans-600.woff2') format('woff2');
+	unicode-range: U+0020-007E;
 }
 
 /*
