--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -80,6 +80,18 @@
 .about-me--text:hover .icon-arrow {
 	margin-left: 0.825rem;
 }
+.about{
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	padding: 10%;
+	background-color: var(--color-primary-dark);
+	z-index: var(--layer-modal);
+	pointer-events: none;
+	opacity: 0;
+}
 
 /*
     works
@@ -160,7 +172,6 @@
 	height: 17px;
 	border-radius: 10px;
 	box-shadow: inset 0 0 0 2px #fff;
-	transition: box-shadow 150ms cubic-bezier(0.95, 0.15, 0.5, 1.25);
 	pointer-events: none;
 }
 .lang span {
