--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -6,7 +6,6 @@
 	--font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, Segoe UI,
 		Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
 		sans-serif;
-	--font-size-zero: 0;
 	--font-size-small: 1.25rem;
 	--font-size-medium: 1.75rem;
 	--font-size-large: 2.75rem;
@@ -89,7 +88,8 @@ input,
 select,
 svg,
 a {
-	color: inherit;
+	color: var(--color-gray);
+	font-size: var(--font-size-small);
 	text-decoration: none;
 	-webkit-tap-highlight-color: transparent;
 	-webkit-user-select: none;
@@ -97,6 +97,10 @@ a {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	transition: 0.3s ease;
+}
+a:hover{
+	color: #fff;
 }
 /* width */
 ::-webkit-scrollbar {
@@ -123,9 +127,6 @@ a {
  * Font size
  *--------------------------------------------------------------*/
 
-.font-zero {
-	font-size: var(--font-size-zero);
-}
 .font-size-medium {
 	font-size: var(--font-size-medium);
 }
