up component cardwork

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -89,6 +89,9 @@ select,
 svg,
 a {
 	color: var(--color-gray);
+	background: inherit;
+	cursor: pointer;
+	border: none;
 	font-size: var(--font-size-small);
 	text-decoration: none;
 	-webkit-tap-highlight-color: transparent;
@@ -99,7 +102,7 @@ a {
 	user-select: none;
 	transition: 0.3s ease;
 }
-a:hover{
+button:hover, a:hover{
 	color: #fff;
 }
 /* width */
