--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -101,6 +101,10 @@
 	color: var(--color-white);
 	margin-top: var(--spacing-xxlarge);
 }
+.github-works{
+	font-size: var(--font-size-small);
+	color: #9c9c9c;
+}
 .card-work {
 	position: relative;
 	display: flex;
@@ -171,10 +175,10 @@
 	height: 17px;
 	border-radius: 10px;
 	box-shadow: inset 0 0 0 2px #fff;
+	transition: box-shadow 150ms cubic-bezier(0.95, 0.15, 0.5, 1.25);
 	pointer-events: none;
 }
 .lang span {
-	vertical-align: middle;
 	padding: 0 10px;
 }
 .lang input:checked {
@@ -183,7 +187,7 @@
 
 @media only screen and (min-width: 600px) {
 	:root {
-		--font-size-small: calc(1.25rem + 30%);
+		--font-size-small: calc(1.25rem + 20%);
 	}
 	h1 {
 		font-size: calc(var(--font-size-large) + 50%);
